sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:9: error: not found: value getNombreValeurs
  var n:Int=getNombreValeurs()
            ^DutchFlagAlgo:11: error: not found: value getValeur
    var stock:Int=getValeur(k)
                  ^DutchFlagAlgo:13: error: not found: value getValeur
    while ((l>=0)&&(stock<getValeur(l))){
                          ^DutchFlagAlgo:14: error: not found: value setValeur
      setValeur(l+1,getValeur(l))
      ^DutchFlagAlgo:14: error: not found: value getValeur
      setValeur(l+1,getValeur(l))
                    ^DutchFlagAlgo:17: error: not found: value setValeur
    setValeur(l+1,stock)
    ^